# my-jobz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
headers/: custom_textedit.hpp  database_manager.hpp  details_dialog.hpp  detailsdialog.hpp  main_window.hpp  mainwindow.hpp  proxy_model.hpp  proxymodel.hpp
resources/: resources.qrc
resources/translations/: myjobz_en.ts  myjobz_pt_BR.qm  myjobz_pt_BR.ts
src/: custom_textedit.cpp  database_manager.cpp  details_dialog.cpp  detailsdialog.cpp  main.cpp  main_window.cpp  mainwindow.cpp  proxy_model.cpp  proxymodel.cpp
ui/: details_dialog.ui  detailsdialog.ui  main_window.ui  mainwindow.ui
